# Cloud-Attack-Surface-Detector

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  cloud-asf  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  start_dashboard.sh
.github/workflows/: ci.yml
scripts/: build.sh  build_tools.sh
src/dashboard/backend/: ai_agent.py  cloud_recon.py  credentials.py  main.py  manager.py
src/dashboard/frontend/: package-lock.json  package.json
src/dashboard/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/dashboard/frontend/src/app/cloud/: page.tsx
src/dashboard/frontend/src/app/cloud/[id]/: page.tsx
src/dashboard/frontend/src/app/scan/[id]/: page.tsx
src/dashboard/frontend/src/app/scan/history/: page.tsx
src/dashboard/frontend/src/app/scan/new/: page.tsx
src/dashboard/frontend/src/app/settings/: page.tsx
src/dashboard/frontend/src/app/system-logs/: page.tsx
src/dashboard/frontend/src/components/: Graph.tsx  Sidebar.module.css  Sidebar.tsx  StatCard.module.css  StatCard.tsx  Toast.tsx
src/go/: go.mod
src/go/cmd/scanner/: main.go
src/go/internal/worker/: pool.go
src/go/skyscan/: go.mod
src/go/skyscan/cmd/skyscan/: main.go
src/go/skyscan/pkg/core/: interfaces.go  types.go
src/go/skyscan/pkg/engine/: full_recon.go  omnistore.go  runner.go
src/go/skyscan/pkg/net/: client.go  dns.go
src/go/skyscan/pkg/netmapper/: netmapper.go
src/go/skyscan/pkg/permute/: permute.go
src/go/skyscan/pkg/providers/: cloud_assets.go
src/go/skyscan/pkg/providers/aws/: cloudfront.go  elasticbeanstalk.go  elb.go  s3.go  s3_v2.go
src/go/skyscan/pkg/providers/azure/: blob.go  blob_v2.go
src/go/skyscan/pkg/providers/gcp/: gcs_v2.go  storage.go
src/go/skyscan/pkg/providers/osint/: crtsh.go
src/python/: pyproject.toml  requirements.txt
src/python/orchestrator/: main.py
src/python/orchestrator/analysis/: attack_path_analyzer.py  iam_analyzer.py  oidc_analyzer.py  persistence_analyzer.py  secrets_scanner.py
src/python/orchestrator/authenticated/: auth.py  compliance.py  diff.py  enumerator.py
src/python/orchestrator/cloud_data/: azure_cloud.json
src/python/orchestrator/cloud_providers/: aws.py  azure.py  gcp.py
src/python/orchestrator/core/: cloud_matcher.py  config.py  discovery.py  normalizer.py  runner.py  types.py
src/python/orchestrator/internal/: metadata.py
src/python/orchestrator/reporting/: generator.py
src/python/orchestrator/reporting/templates/: base.html  cloud_report.html  graph_view.html  report.html
src/python/orchestrator/verification/: verifier.py
src/python/orchestrator/wordlists/: default.txt
tests/: CloudEnv.py  test_aws_provider.py  test_graph_gen.py  test_network_report_gen.py  test_report_gen.py
tests/unit/: test_config.py  test_runner.py
