[tool.poetry]
name = "cloud-surface-detector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
pydantic = "^2.0.0"
boto3 = "^1.28.0"
jinja2 = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
